--- a/AngularJSClient/AngularJSClient.csproj
+++ b/AngularJSClient/AngularJSClient.csproj
@@ -67,9 +67,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CompaniesPage.html" />
-    <Content Include="Controllers\CompaniesController.js" />
+    <Content Include="Modules\app.js" />
+    <Content Include="Modules\Companies.js" />
     <Content Include="Models\Company.js" />
     <Content Include="Models\User.js" />
+    <Content Include="Modules\controller.js" />
     <Content Include="packages.config" />
     <Content Include="Scripts\angular.min.js.map" />
     <None Include="Web.Debug.config">
@@ -80,7 +82,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Controllers\UsersController.js" />
+    <Content Include="Modules\Users.js" />
     <Content Include="Home.html" />
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular.js" />
